--- a/settings.json
+++ b/settings.json
@@ -4,4 +4,8 @@
     "editor.fontFamily": "Consolas, 'Courier New', monospace",
     "workbench.activityBar.visible": true,
     "workbench.sideBar.location": "left"
+    "editor.renderWhitespace": true,
+    "editor.insertSpaces": false,
+    "editor.detectIndentation": false,
+	"editor.tabSize": 2
 } 
