--- a/settings.json
+++ b/settings.json
@@ -1,18 +1,20 @@
-// Place your settings in this file to overwrite the default settings
+// 7/1/18
 {
     "editor.fontSize": 14,
     "editor.fontFamily": "Consolas, 'Courier New', monospace",
-    "workbench.activityBar.visible": true,
-    "workbench.sideBar.location": "right",
-    "editor.renderWhitespace": true,
+    "editor.renderWhitespace": "boundary",
     "editor.insertSpaces": false,
-    "editor.detectIndentation": false,
-    "editor.tabSize": 2,
-    "vsicons.projectDetection.disableDetect": true,
+	"editor.detectIndentation": false,
+	"editor.tabSize": 4,
+    "workbench.activityBar.visible": true,
+    "workbench.sideBar.location": "left",
+    "workbench.colorTheme": "Material Theme Palenight",
+    "workbench.iconTheme": "vscode-icons",
+    "git.ignoreMissingGitWarning": true,
     "window.menuBarVisibility": "toggle",
-    "bookmarks.useStickyBookmarks": true,
-    "bookmarks.saveBookmarksBetweenSessions": true,
-    "workbench.iconTheme": "material-icon-theme",
-    "workbench.colorTheme": "Solarized Dark",
-    "python.linting.pylintEnabled": false
+    "editor.minimap.enabled": false,
+	"materialTheme.fixIconsRunning": false,
+    "editor.lineHeight": 24,
+    "editor.fontLigatures": true,
+    "explorer.decorations.badges": false
 }
