--- a/settings.json
+++ b/settings.json
@@ -1,29 +1,84 @@
-// 7/1/18
+// Place your settings in this file to overwrite the default settings
 {
-    "editor.fontSize": 14,
-    "editor.fontFamily": "Consolas, 'Courier New', monospace",
-    "editor.renderWhitespace": "boundary",
-    "editor.insertSpaces": false,
-	"editor.detectIndentation": false,
-	"editor.tabSize": 4,
-    "workbench.activityBar.visible": true,
-    "workbench.sideBar.location": "left",
-    "workbench.colorTheme": "Material Theme Palenight",
-    "workbench.iconTheme": "vscode-icons",
-    "git.ignoreMissingGitWarning": true,
-    "window.menuBarVisibility": "toggle",
-    "editor.minimap.enabled": false,
-	"materialTheme.fixIconsRunning": false,
-    "editor.lineHeight": 24,
-    "editor.fontLigatures": true,
-	"explorer.decorations.badges": false,
-	
-	
-	"workbench.colorCustomizations": {
-	"tab.activeBorder":"#ECECEC",
-	"tab.inactiveForeground":"#ECECEC",
-	"sideBar.foreground":"#c0c0c0",
-	"sideBarTitle.foreground":"#EEEE",
-	"list.hoverForeground":"#ffffff",
-	}
+  "editor.fontFamily": "Roboto Mono, monospace",
+
+  "terminal.integrated.fontFamily": "Roboto Mono, monospace",
+
+  "editor.fontWeight": "500",
+
+  "editor.renderWhitespace": "boundary",
+  "editor.insertSpaces": false,
+  "editor.tabSize": 4,
+  "git.ignoreMissingGitWarning": true,
+  "window.menuBarVisibility": "toggle",
+  "editor.minimap.enabled": false,
+  "materialTheme.fixIconsRunning": false,
+  "editor.lineHeight": 24,
+  "editor.fontLigatures": true,
+  "explorer.decorations.badges": false,
+  "window.zoomLevel": 0,
+  "telemetry.enableCrashReporter": false,
+  // Is git enabled
+  "git.enabled": true,
+
+  // Path to the git executable
+  "git.path": null,
+
+  // Whether auto fetching is enabled.
+  "git.autofetch": false,
+
+  "workbench.colorCustomizations": {
+    "tab.activeBorder": "#ECECEC",
+    "tab.inactiveForeground": "#ECECEC",
+    "sideBar.foreground": "#c0c0c0",
+    "sideBarTitle.foreground": "#EEEE",
+    "list.hoverForeground": "#ffffff"
+  },
+  "vsicons.dontShowNewVersionMessage": true,
+  "explorer.confirmDragAndDrop": false,
+  "explorer.confirmDelete": false,
+  "telemetry.enableTelemetry": false,
+  "files.autoSaveDelay": 3000,
+  "files.exclude": {
+    "**/.node_modules": true,
+    "**/.temp": true,
+    "**/.tmp": true,
+    "temp": true,
+    "tmp": true
+  },
+  "http.proxyStrictSSL": false,
+  "update.enableWindowsBackgroundUpdates": false,
+  "editor.fontSize": 15,
+  "workbench.commandPalette.history": 15,
+  "workbench.enableExperiments": false,
+  "explorer.enableDragAndDrop": false,
+  "autoimport.filesToScan": "./node_modules/",
+  "workbench.settings.enableNaturalLanguageSearch": false,
+  "window.autoDetectHighContrast": false,
+  "editor.accessibilitySupport": "off",
+  "editor.codeLens": false,
+  "editor.dragAndDrop": false,
+  "editor.glyphMargin": false,
+  "editor.lightbulb.enabled": false,
+  "editor.links": false,
+  "workbench.enableLegacyStorage": false,
+  "files.enableTrash": false,
+  "git.autorefresh": false,
+  "git.autoRepositoryDetection": false,
+  "php.validate.enable": false,
+  "debug.internalConsoleOptions": "neverOpen",
+  "debug.openDebug": "neverOpen",
+  "editor.formatOnSaveTimeout": 2000,
+  "workbench.statusBar.feedback.visible": false,
+  "zenMode.hideStatusBar": false,
+  "workbench.statusBar.visible": false,
+  "editor.colorDecorators": false,
+  "editor.find.seedSearchStringFromSelection": false,
+  "editor.hover.sticky": false,
+  "sync.gist": "github id",
+  "window.titleBarStyle": "native",
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "editor.formatOnSave": true,
+  "editor.detectIndentation": false,
+  "git.enableSmartCommit": true
 }
